--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '5.6.13' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,13 +9,13 @@ package:
 source:
   fn: lpSolve_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/lpSolve_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/lpSolve/lpSolve_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/lpSolve_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/lpSolve/lpSolve_{{ version }}.tar.gz
   sha256: d5d41c53212dead4fd8e6425a9d3c5767cdc5feb19d768a4704116d791cf498d
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 2
   skip: true  # [win32]
   rpaths:
     - lib/R/lib/
@@ -24,17 +23,22 @@ build:
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ compiler('c') }}        # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
 
 test:
   commands:
-    - $R -e "library('lpSolve')"  # [not win]
+    - $R -e "library('lpSolve')"           # [not win]
     - "\"%R%\" -e \"library('lpSolve')\""  # [win]
 
 about:
@@ -48,8 +52,9 @@ about:
 
 extra:
   recipe-maintainers:
-    - cbrueffer
     - johanneskoester
     - bgruening
     - daler
     - jdblischak
+    - cbrueffer
+    - dbast
