--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "5.6.13.1" %}
+{% set version = '5.6.13.1' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,7 +7,6 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: lpSolve_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/lpSolve_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/lpSolve/lpSolve_{{ version }}.tar.gz
@@ -16,7 +15,6 @@ source:
 build:
   merge_build_host: True  # [win]
   number: 0
-  skip: true  # [win32]
   rpaths:
     - lib/R/lib/
     - lib/
@@ -49,12 +47,23 @@ about:
     C and some R functions that solve general linear/integer problems, assignment problems,
     and transportation problems. This version calls lp_solve version 5.5.
   license_family: LGPL
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/LGPL-2'
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
+    - conda-forge/r
+
+# Package: lpSolve
+# Version: 5.6.13.1
+# Date: 2015-09-18
+# Title: Interface to 'Lp_solve' v. 5.5 to Solve Linear/Integer Programs
+# Author: Michel Berkelaar and others
+# Maintainer: ORPHANED
+# Description: Lp_solve is freely available (under LGPL 2) software for solving linear, integer and mixed integer programs. In this implementation we supply a "wrapper" function in C and some R functions that solve general linear/integer problems, assignment problems, and transportation problems. This version calls lp_solve version 5.5.
+# License: LGPL-2
+# NeedsCompilation: yes
+# Packaged: 2019-05-28 10:46:57 UTC; ripley
+# Repository: CRAN
+# Date/Publication: 2019-05-28 14:41:48 UTC
+# X-CRAN-Original-Maintainer: Samuel E. Buttrey <buttrey@nps.edu>
+# X-CRAN-Comment: Orpahaned and corrected on 2019-05-28 as check issues were not addressed despite reminder.
