--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "5.6.13.2" %}
+{% set version = '5.6.13.3' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,7 +10,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/lpSolve_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/lpSolve/lpSolve_{{ version }}.tar.gz
-  sha256: 75f0c0af5cbdc219ac29c792342ecd625903632ad86e581c408879958aa88539
+  sha256: e64165428c40d730f7686d233c22936bf4b3b91a618a600bdf87acaa905f5ff5
 
 build:
   merge_build_host: True  # [win]
@@ -21,7 +21,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('c') }}        # [not win]
+    - {{ compiler('c') }}              # [not win]
     - {{ compiler('m2w64_c') }}        # [win]
     - {{posix}}filesystem        # [win]
     - {{posix}}make
@@ -47,14 +47,15 @@ about:
     C and some R functions that solve general linear/integer problems, assignment problems,
     and transportation problems. This version calls lp_solve version 5.5.
   license_family: LGPL
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/LGPL-2'
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/LGPL-2'
 
 extra:
   recipe-maintainers:
     - conda-forge/r
 
 # Package: lpSolve
-# Version: 5.6.13.1
+# Version: 5.6.13.3
 # Date: 2015-09-18
 # Title: Interface to 'Lp_solve' v. 5.5 to Solve Linear/Integer Programs
 # Author: Michel Berkelaar and others
@@ -62,8 +63,8 @@ extra:
 # Description: Lp_solve is freely available (under LGPL 2) software for solving linear, integer and mixed integer programs. In this implementation we supply a "wrapper" function in C and some R functions that solve general linear/integer problems, assignment problems, and transportation problems. This version calls lp_solve version 5.5.
 # License: LGPL-2
 # NeedsCompilation: yes
-# Packaged: 2019-05-28 10:46:57 UTC; ripley
+# Packaged: 2019-08-19 06:39:18 UTC; ripley
 # Repository: CRAN
-# Date/Publication: 2019-05-28 14:41:48 UTC
+# Date/Publication: 2019-08-19 08:20:05 UTC
 # X-CRAN-Original-Maintainer: Samuel E. Buttrey <buttrey@nps.edu>
-# X-CRAN-Comment: Orpahaned and corrected on 2019-05-28 as check issues were not addressed despite reminder.
+# X-CRAN-Comment: Orphaned and corrected on 2019-05-28 as check issues were not addressed despite reminder. . gcc 9 warnings
