--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=lpSolve
-  license: LGPL-2
+  license: LGPL-2.0-only
   summary: Lp_solve is freely available (under LGPL 2) software for solving linear, integer and mixed integer programs. In this implementation we supply a "wrapper" function in C and some R functions that solve general linear/integer problems, assignment problems, and transportation problems. This version calls lp_solve
     version 5.5.
   license_family: LGPL
